fixed contrast errors

--- a/styles/place.css
+++ b/styles/place.css
@@ -105,6 +105,7 @@ section {
     .data, .weather {
         border: 2px solid black;
         margin: 10px 0;
+        background: none;
     }
 
     .weather img {
